--- a/boynames.css
+++ b/boynames.css
@@ -37,14 +37,15 @@ nav{
 .container{
 	  display:flex;
 	  text-align:center; 
-    background-color:black;
+    background-color:white;
+    flex-wrap: wrap;
 }
 nav a{
   color:white;
   margin:0 10px 0 10px;
   flex:1;
   text-align:center;
-  background-color:black
+  background-color:black;
 }
 /* Start */
 #banner{
@@ -56,108 +57,68 @@ nav a{
 }
 * {box-sizing:border-box}
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1100px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  background-color:blue;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-  color:white;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
-  
- p{
-  font-family: "Lucida Console", "Courier New", monospace;
-}
-p{
-  font-style: italic;
-}
-div{
-	margin:0 10px 0 10px;
+.card{
   flex:1;
-  text-align:left;
-  background-color: black;
-  text-align:left
+  margin:10px;
+  padding:10px;
+  border:1px solid gray;
+  text-align:center;
+  min-width: 180px;
+  max-width: 180px;
+  overflow:hidden;
+  box-shadow:2px 2px 2px white;
 }
 
-p{
-  font-size: 100px;
- }
+.highlight{
+  font-style:italic;
+  color:blue;
+}
+.heading{
+  font-weight:bold;
+}
+.card a{
+  text-decoration:none;
+  background-color:blue;
+  color:white;
+  border-radius:4px;
+  padding:6px;
+  box-shadow:2px 2px 2px whitesmoke;
+}
+.card a:hover{
+  background-color:cornflowerblue;
+}
+
+.item{
+  width:150px;
+  height:150px;
+  object-fit:cover;
+}
+body {
+  background-image: url('boybackground.jpg');
+  background-size: cover;
+  background-repeat: no repeat;
+  background-position:center;
+  height:100vh;
+  margin:1;
+}
+
+html,body{
+  height:100%;
+  margin:0 auto;
+}
+
+.center{
+      justify-content:center;
+      align-items:center
+}
+.button{
+  text-decoration:none;
+  background-color:blue;
+  color:white;
+  border-radius:4px;
+  padding:6px;
+  box-shadow:2px 2px 2px black;
+}
+.button:hover{
+  background-color:cornflowerblue;
 }
