--- a/style.css
+++ b/style.css
@@ -1,24 +1,63 @@
-body{
-    background-image: url('babybackground.jpg.jpg');
-    background-size: cover;
-    background-repeat: no repeat;
-    background-position: center;
-    height: 180vh;
-    margin:0;
+body {
+  background-image: url('babybackground.jpg.jpg');
+  background-size: cover;
+  background-repeat: no repeat;
+  background-position:center;
+  height:100vh;
+  margin:1;
 }
-
 
 html,body{
+  height:100%;
   margin:0 auto;
-  font-family:Arial;
+}
+
+
+
+
+.center{
+      justify-content:center;
+      align-items:center
+}
+
+body{
+  font-family:arial;
+  /*margin:0 auto;  New */
+}
+a{
+  text-decoration:none;
+}
+
+#click_me:hover{
+  color:blue !important;
+}
+/* CSS Specificity 
+   inline > id > class > element
+*/
+nav{
+  padding:5px;
+}
+
+nav a{
+  color:white;
+  margin:0 10px 0 10px;
+  flex:1;
+  text-align:center;
+  background-color:black
 }
 .container{
-  display:flex;
+	  display:flex;
+	  text-align:center; 
+    background-color:khaki;
+}
+
+/* Start */
+#banner{
+  color:white;
   padding:10px;
-  flex-wrap:wrap;
+  text-align:center;
+
+  background-color:khaki
 }
-.center{
-  justify-content:center;
-  align-items:center;
-}
+* {box-sizing:border-box}
 
